Finished part of RBF-FD method. still working

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -11,6 +11,7 @@
 % NOTE: bibentry MUST appear before the hyperref or build will fail
 \usepackage{bibentry}
 \nobibliography*
+\usepackage[sort]{natbib}
 
 \usepackage[
     hyperindex=true,		% Make numbers of index links as well
