--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan F. Bollig at 2013-04-29 02:20:08 -0500 
+%% Created for Evan F. Bollig at 2013-04-30 15:29:10 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Davydov2011,
+	Author = {Oleg Davydov and Dang Thi Oanh},
+	Date-Added = {2013-04-30 20:29:02 +0000},
+	Date-Modified = {2013-04-30 20:29:08 +0000},
+	Doi = {10.1016/j.camwa.2011.06.037},
+	Issn = {0898-1221},
+	Journal = {Computers & Mathematics with Applications},
+	Keywords = {RBF-FD},
+	Number = {5},
+	Pages = {2143 - 2161},
+	Title = {On the optimal shape parameter for Gaussian radial basis function finite difference approximation of the Poisson equation},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0898122111005177},
+	Volume = {62},
+	Year = {2011},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0898122111005177},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.camwa.2011.06.037}}
 
 @article{Neves2009,
 	Abstract = {An hybrid technique is used for the solutions of static and time-dependent problems. The idea is to combine the radial basis function (RBF) collocation method and the pseudospectal (PS) method getting to the RBF-PS method. The approach presented in this paper includes a shape parameter optimization and produces highly accurate results. Different examples of the procedure are presented and different radial basis functions are used. One and two-dimensional problems are considered with various boundary and initial conditions. We consider generic problems, but also results on beams and plates. The displacement and the stress analysis are conducted for static and transient dynamic situations. Results obtained are in good agreement with exact solutions or references considered.},
