--- a/latex/rbffd_methods_content/rbftype_table.tex
+++ b/latex/rbffd_methods_content/rbftype_table.tex
@@ -17,7 +17,7 @@
 % RBF-FD
 \newcommand{\rbffdglobalrbf}[0]{N/A}
 \newcommand{\rbffdcsrbf}[0]{N/A}
-\newcommand{\rbffdlocalrbf}[0]{\cite{WrightFornberg06, Wright2003, Shu2003, Cecil2004, Wright2004, Shu2006, Chandhini2007}}
+\newcommand{\rbffdlocalrbf}[0]{\cite{WrightFornberg06, Wright2003, Shu2003, Cecil2004, Wright2004, Shu2006, Chandhini2007, Davydov2011, FlyerLehto10, FlyerLehto11, Fornberg2011a, FornbergLehto11}} 
 
 
 %\begin{sidewaystable}
