--- a/latex/rbffd_weights_on_sphere.tex
+++ b/latex/rbffd_weights_on_sphere.tex
@@ -12,6 +12,8 @@
 
 
 \chapter{Projected Weights on the Sphere} 
+\label{app:indirect_weights}
+
 It is shown in \cite{FlyerWright09, FlyerLehto11} that a projection operator
 
 $$ 
