--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -329,7 +329,7 @@ It is now possible again to write the interpolation problem as a linear system u
  \underbrace{\left[ \begin{array}{c c} 
 	\phi & P \\
 	P^T & 0
-	\end{array} \right]}_{A_{\diffop{}}} \left( \begin{array}{c}
+	\end{array} \right]}_{A} \left( \begin{array}{c}
 							c \\
 							d
 							 \end{array}
@@ -370,26 +370,28 @@ $$
   \label{eqn:solve_coeffs}
  \end{equation}
  where matrix $A_{\diffop{}}$ depends on the choice of collocation method. 
+ % TODO: fix use of A_diffop; "but contains $\diffop{\phi} = \phi_\diffop{}$. 
 Once the linear system is solved, the value $u(x)$ is reconstructed at the test points following Equation~\ref{eqn:interpolate_x}:
 \begin{eqnarray}
-u(x) & = &  \left.
+u(x) & \approx &  \left.
 \left[ \begin{array}{c c} 
        \phi &  P
 	\end{array} \right]
 	  \left( \begin{array}{cc}  c \\ d  \end{array} \right)  \ \right|_{x={x_i}} \nonumber\\
-	 & = & B A^{-1}_\diffop{} \left( \begin{array}{cc}  f \\ 0  \end{array} \right) 
+	 & \approx & B A^{-1}_\diffop{} \left( \begin{array}{cc}  f \\ 0  \end{array} \right) 
 	\label{eqn:solve_u}
 \end{eqnarray}
 Likewise, to obtain differential quantities we have: 
 \begin{eqnarray*}
-\diffop{u}(x) & = & \left.
+\diffop{u}(x) & \approx & \left.
 \left[ \begin{array}{c c} 
-       \diffop{\phi} &  \diffop{P}
+       \phi_{\diffop{}} &  P_{\diffop{}}
 	\end{array} \right]
 	  \left( \begin{array}{cc}  c \\ d  \end{array} \right)  \ \right|_{x={x_i}} \\
-  	 & = & B_{\diffop{}} A^{-1}_\diffop{} \left( \begin{array}{cc}  f \\ 0  \end{array} \right).
+  	 & \approx & B_{\diffop{}} A^{-1}_\diffop{} \left( \begin{array}{cc}  f \\ 0  \end{array} \right)
 	\label{eqn:solve_uxx}
 \end{eqnarray*}
+%where $\phi_{\diffop}$ is the analytic RBF with 
 
 %TODO: \subsection{Applying Methods for PDEs}
 %TODO: \subsubsection{Explicit PDEs}
@@ -800,20 +802,9 @@ where multiple sets of weights ($c_\nabla, c_x, c_y$) solved simultaneously. Thi
 %TODO: boundaries can be, but are not always handled by special operators
 %TODO: preprocessing complexity vs timestep 
 
-\section{Applying DMs}
-
-	%\authnote{must have things mixed up in my head. Cannot justify the reason to have $\PP_{\diffop{}}$ and not $0$. Perhaps because I dont fully understand the cardinal point derivation of RBFFD.}
+\subsection{Application to PDEs}
 
 
-\section{Generating Stencils}
-%reply to the LSH question from the reviewer involving parallelization of the search process for each point, and the issue regarding embarrassingly parallel process. Also note: this is done only once so efficiency is not an issue, nor is parallelization.
-
-For each of the $N$ small system solves of Equation~(\ref{eq:rbffd_weight_system}), the $n$ nearest neighbors to $\vx_j$ need to be located. This can be done efficiently using neighbor query algorithms or spatial partitioning data-structures such as Locality Sensitive Hashing (LSH) and $k$D-Tree. Different query algorithms often have a profound impact on the DM structure and memory access patterns. We choose a Raster ($ijk$) ordering LSH algorithm \cite{Bollig2011} leading to the matrix structure in Figures~\ref{fig:oneThreadPerStencil} and \ref{fig:oneWarpPerStencil}. While querying neighbors for each stencil is an embarrassingly parallel operation, the node sets used here are stationary and require stencil generation only once. Efficiency and parallelism for this task has little impact on the overall run-time of tests, which is dominated by the time-stepping. We preprocess node sets and generate stencils serially, then load stencils and nodes from disk at run-time. In contrast to the RBF-FD view of a static grid, Lagrangian/particle based PDE algorithms promote efficient parallel variants of LSH in order to accelerate querying neighbors at each time-step \cite{Pan2011, Goswami2010}. 
-
-%TODO: sparsity
-%TODO: Node ordering
-%TODO: show blocks for boundary conditions (annulus)
-%TODO: application (explicit/implicit solution)
 
 \section{Weight Operators}
 %Throughout the development of our parallel code we have verified code correctness through the solution of a variety of PDEs.
@@ -821,18 +812,18 @@ In the course of this work we work with a variety of PDEs.
  Here we provide a list of relevant operators their corresponding equations for the RHS of Equation~\ref{eq:rbffd_weight_system}. 
 
 \subsection{Gradient ($\grad$)}
-The standard first derivatives $\pd{}{x}, \pd{}{y}, \pd{}{z}$ are produced by the chain rule
+The standard first derivatives in Cartesian coordinates ($\pd{}{x}, \pd{}{y}, \pd{}{z}$) are produced via the chain rule
 	\begin{align*} 
 	 \pd{\phi}{x} = \d{r}{x} \d{\phi}{r} = \frac{(x-x_{j})}{r} \d{\phi}{r} \\
 	 \pd{\phi}{y} = \d{r}{y} \d{\phi}{r} = \frac{(y-y_{j})}{r} \d{\phi}{r} \\
 	 \pd{\phi}{z} = \d{r}{z} \d{\phi}{r} = \frac{(z-z_{j})}{r} \d{\phi}{r}
 	\end{align*}
-where $\pd{\phi}{r}$ for the Gaussian RBFs is given by: 
+%where $\pd{\phi}{r}$ for the Gaussian RBFs is given by: 
 
 
 \subsection{Laplacian ($\Laplacian$)}
 
-2D: 
+2D: \authnote{TODO}
 
 3D: 
 
@@ -901,16 +892,14 @@ P\pd{}{x_3} = ( x_3 \vx^T \vx_k - x_{3,k}) \frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\
 
 \subsection{Stabilization: Hyperviscosity}
 
-In Chapter~\ref{chap:explicit_solutions}, differentiation matrices will encode convective operators of the form 
+When explicitly solving hyperbolic equations, differentiation matrices encode convective operators of the form 
 \begin{equation}
-D = \alpha \pd{}{\lambda} + \beta \pd{}{\theta} \label{eqconv}
+L = \alpha \pd{}{\lambda} + \beta \pd{}{\theta} \label{eqconv}
 \end{equation}
-where $\alpha$ and $\beta$ are a function of the fluid velocity. The convective operator, discretized
-through RBF-FD, has eigenvalues 
-%given 
- in the right half-plane causing the method to be unstable~\cite{FornbergLehto11, FlyerLehto11}. 
-%. 
-%Shorter previous sentence. What diff operator is being discretized by DM?
+%TODO: where $\alpha$ and $\beta$ are a function of the fluid velocity. 
+The convective operator, discretized
+through RBF-FD, has eigenvalues  
+ in the right half-plane causing the method to be unstable~\cite{FornbergLehto11, FlyerLehto11}.  
 Stabilization of the RBF-FD method is achieved through the application of a hyperviscosity filter 
 to Equation~(\ref{eqconv}) \cite{FornbergLehto11}. By using Gaussian 
  RBFs, $\phi(r) = e^{-(\epsilon r)^2}$, the hyperviscosity (a high order Laplacian operator) simplifies to
@@ -919,38 +908,99 @@ to Equation~(\ref{eqconv}) \cite{FornbergLehto11}. By using Gaussian
 \label{eqn:gaussian_hv}
 \end{equation}
 where $k$ is the order of the Laplacian and  $p_k(r)$ are multiples of generalized Laguerre polynomials that
-are generated recursively (see \cite{FornbergLehto11}: Section 3.2). We assume a 2D  Laplacian operator 
-when working on the surface of the sphere since a local stencil can be viewed as lying on a plane.
-%Since the purpose of hyperviscosity is to suppress the highly oscillatory modes while leaving all the smooth ones intact, it suffices to ignore the local curvature of the sphere, and calculate $\Delta^{k}\phi(r)$ as if the RBF-FD stencil was located on a 2D flat plane.
-%A 2D approximation for the hyperviscosity suffices because its only role is to suppress spurious unphysical modes. The scale of hyperviscosity, on the order of $10^{-30}$, makes this a completely harmless assumption even in the case when the stencil radius is large relative to the size of the sphere.
-
-%I do not understand question 2.8
+are generated recursively (\cite{FornbergLehto11}):
+\begin{align*}
+\begin{cases} 
+p_0(r) &=1, \\
+p_1(r) &= 4(\epsilon r)^2 - 2d, \\
+p_k(r) &= 4((\epsilon r)^2 - 2(k-1) - \frac{d}{2})  p_{k-1}(r) - 8(k-1)(2(k-1) - 2 + d) p_{k-2}(r), \ \ \ \ k = 2, 3, ...
+\end{cases}
+\end{align*}
+where $d$ is the dimension of the problem. In application of hyperviscosity, we assume a $d=2$ on the surface of the sphere since individual RBF-FD stencils can be viewed as (nearly) lying on a plane. For small $N$, the diameter of the stencil may not be sufficiently 
+small compared to the radius of the sphere, and hyperviscosity might not work as advertised. 
+%However,
+%numerical evidence in \cite{FornbergLehto11,BolligFlyer} \ci suggests that if the RBFs adequately resolve the convective operator, the 2D 
+%hyperviscosity operator does its job. 
+%We base our work on the work of Fornberg and Lehto \cite{FornbergLehto11}, which was
+%performed on a sphere, and tune our parameters following their guidelines. 
 
 In the case of parabolic and hyperbolic PDEs, hyperviscosity is added as a filter to the right hand side of the evaluation. For example, at the continuous level, 
 the equation solved takes the form
 \begin{equation}
-\pd{u}{t} = - D u + H u,
+\pd{u}{t} = - \diffop u + H u,
 \label{eq:evaluation_with_hyperviscosity}
 \end{equation}
-where $D$ is the PDE operator, and $H$ is the hyperviscosity filter operator.
-Applying hyperviscosity shifts all the eigenvalues of D to the left half of the complex plane. 
+where $\diffop$ is the PDE operator, and $H$ is the hyperviscosity filter operator.
+Applying hyperviscosity shifts all the eigenvalues of $L$ (the discrete form of $\diffop{}$) to the left half of the complex plane. 
 This shift is controlled by $k$, the order of the Laplacian, and a scaling parameter $\gamma_c$, defined by
 \begin{equation*}	
 H = \gamma \Delta^{k} = \gamma_c N^{-k} \Delta^{k}.
 \end{equation*}
-Given a choice of $\epsilon$ (see Section~\ref{sec:numerical_validation}), it was found experimentally that $\gamma = \gamma_c N^{-k}$  provides stability and good accuracy for all values of $N$ considered here. It also ensures that the viscosity vanishes as $N\rightarrow\infty$ \cite{FlyerLehto11}.
+It was found in \cite{FlyerLehto11}, and verified in our own application, that $\gamma = \gamma_c N^{-k}$  provides stability and good accuracy for all values of $N$ considered here. It also ensures that the viscosity vanishes as $N\rightarrow\infty$ \cite{FlyerLehto11}.
 In general, the larger the stencil size, the higher the order of the Laplacian.  This is attributed to the fact that, for convective operators, larger stencils treat a wider range of modes accurately. As a result, the hyperviscosity operator should preserve as much of that range as possible. The parameter $\gamma_c$ must also be chosen with care and its sign depends on $k$ (for $k$ even, $\gamma_c$ will be negative and for $k$ odd, it will be positive). If $\gamma_c$ is too large, the eigenvalues move outside the stability domain of our time-stepping scheme and/or eigenvalues corresponding to lower physical modes are not left intact, reducing the accuracy of our approximation. If $\gamma_c$ is too small, eigenvalues remain in the right half-plane \cite{FornbergLehto11,FlyerLehto11}.
+
+\section{Generating Stencils}
+%reply to the LSH question from the reviewer involving parallelization of the search process for each point, and the issue regarding embarrassingly parallel process. Also note: this is done only once so efficiency is not an issue, nor is parallelization.
+
+For each of the $N$ small system solves of Equation~(\ref{eq:rbffd_weight_system}), the $n$ nearest neighbors to $\vx_j$ need to be located. This can be done efficiently using neighbor query algorithms or spatial partitioning data-structures such as Locality Sensitive Hashing (LSH) and $k$D-Tree. Different query algorithms often have a profound impact on the DM structure and memory access patterns. We choose a Raster ($ijk$) ordering LSH algorithm \cite{Bollig2011} leading to the matrix structure in Figures~\ref{fig:oneThreadPerStencil} and \ref{fig:oneWarpPerStencil}. While querying neighbors for each stencil is an embarrassingly parallel operation, the node sets used here are stationary and require stencil generation only once. Efficiency and parallelism for this task has little impact on the overall run-time of tests, which is dominated by the time-stepping. We preprocess node sets and generate stencils serially, then load stencils and nodes from disk at run-time. In contrast to the RBF-FD view of a static grid, Lagrangian/particle based PDE algorithms promote efficient parallel variants of LSH in order to accelerate querying neighbors at each time-step \cite{Pan2011, Goswami2010}. 
+
+%TODO: sparsity
+%TODO: Node ordering
+%TODO: show blocks for boundary conditions (annulus)
+%TODO: application (explicit/implicit solution)
+
 
 \section{On Choosing the Right $\epsilon$} 
 
+\section{Generating Stencils}
+%reply to the LSH question from the reviewer involving parallelization of the search process for each point, and the issue regarding embarrassingly parallel process. Also note: this is done only once so efficiency is not an issue, nor is parallelization.
+
+For each of the $N$ small system solves of Equation~(\ref{eq:rbffd_weight_system}), the $n$ nearest neighbors to $\vx_j$ need to be located. This can be done efficiently using neighbor query algorithms or spatial partitioning data-structures such as Locality Sensitive Hashing (LSH) and $k$D-Tree. Different query algorithms often have a profound impact on the DM structure and memory access patterns. We choose a Raster ($ijk$) ordering LSH algorithm \cite{Bollig2011} leading to the matrix structure in Figures~\ref{fig:oneThreadPerStencil} and \ref{fig:oneWarpPerStencil}. While querying neighbors for each stencil is an embarrassingly parallel operation, the node sets used here are stationary and require stencil generation only once. Efficiency and parallelism for this task has little impact on the overall run-time of tests, which is dominated by the time-stepping. We preprocess node sets and generate stencils serially, then load stencils and nodes from disk at run-time. In contrast to the RBF-FD view of a static grid, Lagrangian/particle based PDE algorithms promote efficient parallel variants of LSH in order to accelerate querying neighbors at each time-step \cite{Pan2011, Goswami2010}. 
 
 
-% TODO: Break off to new chapter
-\section{TEMP}
+Many algorithms exist to query the $k$-nearest neighbors (equivalently all nodes in the minimum/smallest enclosing circle). Some algorithms overlay a grid similar to Locality Sensitive Hashing and query such as... \cite{HarPeledMazumdar2003}.
+
+\subsection{Node Placement -- Centroidal Voronoi Tessellation}
+We make the assumption for now that we use regularly distributed nodes. Centroidal Voronoi tessellations provide reasonably good distributions for solutions. Examples (heat ellipse, ellipsoid, sphere, square cavity).
+
+The motivation behind RBF-FD is generality/functionality in the numerical method. Scattered nodes are supported. Distribution requires proper choice of support, and tight nodes result in increased conditioning
+
+\subsection{Approximate Nearest Neighbor (ANN) Query}
+
+RBF methods are traditionally described as general and meshless in that they apply to unstructured clouds of points in arbitrary dimensions. However, although the term meshless implies a method capable of operating with no node connectivity, all numerical methods---meshless RBF methods included---connect nodes in the domain. For example, the ``meshless'' global RBF method connects every node in the domain to all other nodes. Compact support or local RBF methods like RBF-FD limit connections to nodes that lie within a predetermined radius.
+
+The connections between nodes form a directed adjacency graph with edges that dictate the paths along which data/phenomena can travel. For example, a plus shaped stencil of five points with a center node and four neighboring nodes allows values to propagate north, south, east and west; not northeast, southeast, etc.
 
 
-\subsection{Parallel RBF Implementations}
-\authnote{Related work for start of Parallel/GPU chapter}
+They are robust and function on scattered point clouds. RBF-FD in particular requires stencils to be generated from $n$ nearest neighbors to a stencil center. The cost of these neighbor queries can vary greatly depending on the choice of algorithm or data-structure used to make the query. 
+
+For example, in general brute force is inefficient 
+The author of \cite{Fasshauer2007} queries $n$ nearest neighbors for a compact-support RBF partition of unity example with a $k$-D tree. In \cite{FlyerLehto11,FornbergLehto11} a $k$-D Tree is leveraged for all neighbor queries for RBF-FD. 
+
+In our work in \cite{BolligFlyerErlebacher2012} an alternative to $k$-D tree was leveraged, based loosely on Locality Sensitive Hashing.
+
+\subsubsection{$k$-D Tree}
+
+Most of the RBF community leverages the $k$-D tree, due to its low computational complexity for querying neighbors and its wide availability as standalone software in the public domain (e.g., matlab central has a few implementations for download, and the MATLAB Statistics Toolbox includes an efficient k-D Tree). 
+
+The complexity of assembling he tree is
+
+The Matlab central $k$-D Tree is MEX compiled and efficient. We integrated the standalone C++ code into our library.  
+
+While the $k$-D Tree functions well for queries, its downfall is a large cost in preprocessing to build the tree. For moving nodes, such as in Lagrangian schemes, this cost is prohibitively high. In an attempt to reduce the cost, lagrangian schemes introduced approximate nearest neighbor queries based on 
+
+Approximate nearest neighbors will be nearly balanced. 
+We observe that RBF-FD functions as well on stencils of true nearest neighbors as it does on approximate nearest neighbors. 
+
+%TODO: sparsity
+%TODO: Node ordering
+%TODO: show blocks for boundary conditions (annulus)
+%TODO: application (explicit/implicit solution)
+
+
+\chapter{Distributed Multi-GPU RBF-FD Implementation}
+
+%\authnote{Related work for start of Parallel/GPU chapter}
 Parallel implementations of RBF methods currently rely on parallel domain decomposition. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods \cite{Divo2007}. The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
 
 Divo and Kassab \cite{Divo2007} used a domain decomposition method with artificial 
@@ -974,71 +1024,6 @@ Additional RBF implementations are discussed at the end of this chapter in the c
 
 In this work, we will add to the above experiences, with the added twist of incorporating an implementation on the GPU (see later chapters). 
 
-
-\section{Fragments (integrate above)}
-
-Stabilization of the RBF-FD method is achieved through the application of a hyperviscosity filter \cite{FornbergLehto11}. By assuming the use of Gaussian RBFs, $\phi(r) = e^{-(\epsilon r)^2}$, the hyperviscosity operator simplifies to
-\begin{equation}
-\Delta^{k}\phi(r) = \epsilon^{2k} p_k(r) \phi(r).
-\label{eqn:gaussian_hv}
-\end{equation}
-The multiples of generalized Laguerre polynomials, $p_k(r)$, are obtained through the following recursive relation:
-\begin{align*}
-\begin{cases} 
-p_0(r) &=1, \\
-p_1(r) &= 4(\epsilon r)^2 - 2d, \\
-p_k(r) &= 4((\epsilon r)^2 - 2(k-1) - \frac{d}{2})  p_{k-1}(r) - 8(k-1)(2(k-1) - 2 + d) p_{k-2}(r), \ \ \ \ k = 2, 3, ...
-\end{cases}
-\end{align*}
-where $d$ is the dimension of the problem. We assume $d=2$ below when working on the surface of the sphere.
-
-
-Many algorithms exist to query the $k$-nearest neighbors (equivalently all nodes in the minimum/smallest enclosing circle). Some algorithms overlay a grid similar to Locality Sensitive Hashing and query such as... \cite{HarPeledMazumdar2003}.
-
-
-\subsubsection{Conditioning} 
-Conditioning is defined as: 
-
-With condition number estimates we can choose a proper support parameter for uniformly distributed node sets.
-
-Alternative algorithms exist for solving for RBF-FD weights when the systems are overly ill-conditioned. Currently, we have an unpublished algorithm ContourSVD available to play with (demonstrate accuracy improvements). 
-
-\subsubsection{Node Placement -- Centroidal Voronoi Tessellation}
-We make the assumption for now that we use regularly distributed nodes. Centroidal Voronoi tessellations provide reasonably good distributions for solutions. Examples (heat ellipse, ellipsoid, sphere, square cavity).
-
-The motivation behind RBF-FD is generality/functionality in the numerical method. Scattered nodes are supported. Distribution requires proper choice of support, and tight nodes result in increased conditioning
-
-\section{Approximate Nearest Neighbor (ANN) Query}
-
-RBF methods are traditionally described as general and meshless in that they apply to unstructured clouds of points in arbitrary dimensions. However, although the term meshless implies a method capable of operating with no node connectivity, all numerical methods---meshless RBF methods included---connect nodes in the domain. For example, the ``meshless'' global RBF method connects every node in the domain to all other nodes. Compact support or local RBF methods like RBF-FD limit connections to nodes that lie within a predetermined radius.
-
-The connections between nodes form a directed adjacency graph with edges that dictate the paths along which data/phenomena can travel. For example, a plus shaped stencil of five points with a center node and four neighboring nodes allows values to propagate north, south, east and west; not northeast, southeast, etc.
-
-
-They are robust and function on scattered point clouds. RBF-FD in particular requires stencils to be generated from $n$ nearest neighbors to a stencil center. The cost of these neighbor queries can vary greatly depending on the choice of algorithm or data-structure used to make the query. 
-
-For example, in general brute force is inefficient 
-The author of \cite{Fasshauer2007} queries $n$ nearest neighbors for a compact-support RBF partition of unity example with a $k$-D tree. In \cite{FlyerLehto11,FornbergLehto11} a $k$-D Tree is leveraged for all neighbor queries for RBF-FD. 
-
-In our work in \cite{BolligFlyerErlebacher2012} an alternative to $k$-D tree was leveraged, based loosely on Locality Sensitive Hashing.
-
-\subsection{$k$-D Tree}
-
-Most of the RBF community leverages the $k$-D tree, due to its low computational complexity for querying neighbors and its wide availability as standalone software in the public domain (e.g., matlab central has a few implementations for download, and the MATLAB Statistics Toolbox includes an efficient k-D Tree). 
-
-The complexity of assembling he tree is
-
-The Matlab central $k$-D Tree is MEX compiled and efficient. We integrated the standalone C++ code into our library.  
-
-While the $k$-D Tree functions well for queries, its downfall is a large cost in preprocessing to build the tree. For moving nodes, such as in Lagrangian schemes, this cost is prohibitively high. In an attempt to reduce the cost, lagrangian schemes introduced approximate nearest neighbor queries based on 
-
-Approximate nearest neighbors will be nearly balanced. 
-We observe that RBF-FD functions as well on stencils of true nearest neighbors as it does on approximate nearest neighbors. 
-
-
-
-\chapter{RBF Methods on Multiple GPUs}
-\label{chap:parallel_rbf} 
 
 RBFs on GPU work: \cite{Schmidt2009a, Schmidt2009b} (global), \cite{Yokota2010} (compact)
 
